@@ -610,8 +610,8 @@ void imodContEditJoin(ImodView *vw)
   Iindex *i2p = &cojoin.i2;
   Iindex *indp;
   Iindex *indArray;
-  int co, pt1, pt2, ind1, ind2, tpt1, tpt2, end1, end2, concat, testConcat;
-  int i, j, numJoin, ijoin, ic1, ic2;
+  int co, pt1, pt2, ind1, ind2, tpt1, tpt2, end1, end2, concat, testConcat, invertOne;
+  int i, j, numJoin, ijoin, ic1, ic2, numTest, numInside;
   float dist, distMin, tdist;
   Icont *cont1, *cont2, *jcont;
   Imod *imod = vw->imod;
@@ -836,9 +836,27 @@ void imodContEditJoin(ImodView *vw)
       pt2 = 0;
     }
 
-    if (iobjClose(obj->flags) && !concat) 
-      jcont = imodContourJoin(cont1, cont2, pt1, pt2, FALSE, 0);
-    else
+    // If closed and not concatenating, see if one contour is inside the other by testing
+    // 1/4 of the points and if so, join with flag to make them go in opposite directions
+    if (iobjClose(obj->flags) && !concat) {
+      invertOne = 0;
+      numInside = 0;
+      numTest = B3DMAX(1, cont1->psize / 4);
+      for (ind1 = 0; ind1 < numTest; ind1++)
+        if (imodPointInsideCont(cont2, &cont1->pts[ind1 * 4]))
+          numInside++;
+      if (numInside == numTest)
+        invertOne = 1;
+      else if (!numInside) {
+        numTest = B3DMAX(1, cont2->psize / 4);
+        for (ind1 = 0; ind1 < numTest; ind1++)
+          if (imodPointInsideCont(cont1, &cont2->pts[ind1 * 4]))
+            numInside++;
+        if (numInside == numTest)
+          invertOne = 1;
+      }
+      jcont = imodContourJoin(cont1, cont2, pt1, pt2, FALSE, invertOne);
+    } else
       jcont = imodContourSplice(cont1, cont2, pt1, pt2);
 
     if (!jcont) {
